@@ -14,6 +14,7 @@
 		as well (Thx Nedko)
 	- Fixed problem with preferences, where it would show theme change
 		until a second refresh. 
+	- Added refresh on Local Play page (Thx XGizzmo)
 	
 
 --------------------------------------------------------------------------
